Dark mode in portfolio fixes

--- a/static/css/dark-mode.css
+++ b/static/css/dark-mode.css
@@ -4,7 +4,7 @@
   /*--mainColorRGB: */
 }
 
-.white-mode {
+.light-mode {
   --bgColor: white;
   --foregroundColorRGB: 0, 0, 0;
 }
